// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Configurations controller (e2e) GET: should return a configuration 1`] = `
{
  "key": "my-config",
  "value": "myValue",
}
`;

exports[`A Configurations controller (e2e) GET: should return configurations 1`] = `
[
  {
    "key": "my-config",
    "value": "myValue",
  },
]
`;

exports[`A Configurations controller (e2e) POST: should create a configuration 1`] = `
{
  "key": "foo",
  "value": "bar",
}
`;

exports[`A Configurations controller (e2e) PUT: should upate a configuration 1`] = `
{
  "key": "my-config",
  "value": "updated value",
}
`;
